--- a/androidtoggleswitch-sample/build.gradle
+++ b/androidtoggleswitch-sample/build.gradle
@@ -24,7 +24,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'  // Use AndroidX Espresso
-    implementation 'androidx.appcompat:appcompat:1.7.0'  // Use AndroidX AppCompat
+    implementation 'androidx.appcompat:appcompat:1.6.0'
     testImplementation 'junit:junit:4.13.2'
     implementation project(':androidtoggleswitch')
 }
