--- a/androidtoggleswitch/build.gradle
+++ b/androidtoggleswitch/build.gradle
@@ -1,15 +1,19 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 33  // Update to a newer compile SDK version
+    compileSdkVersion 34  // Update to a newer compile SDK version
 
     defaultConfig {
-        minSdkVersion 16
+        minSdkVersion 21
         targetSdkVersion 33  // Update target SDK version
         versionCode 1
         versionName "1.0"
     }
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -20,5 +24,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.7.0'  // Use AndroidX AppCompat
-}// }
+    implementation 'androidx.appcompat:appcompat:1.6.0'  // Use AndroidX AppCompat
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.22"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.8.22"
+}
