--- a/gradle.properties
+++ b/gradle.properties
@@ -16,4 +16,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-android.suppressUnsupportedCompileSdk=33
+android.suppressUnsupportedCompileSdk=33,34
+android.useAndroidX=true
+android.enableJetifier=true
+
